--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
             <div class="ejercicios">
                 <div class="desafio uno">
                     <h3>Desafíos N°1</h3>
-                    <button onclick="mostrarDosAlertas();" class="boton btnuno">Desafío a.</button>
-                    <button onclick="introduceNombre();" class="boton btnuno">Desafío b.</button>
-                    <button onclick="licenciaConducir();" class="boton btnuno">Desafío c.</button>
+                    <button onclick="mostrarDosAlertas();" class="boton btnuno">a.</button>
+                    <button onclick="introduceNombre();" class="boton btnuno">b.</button>
+                    <button onclick="licenciaConducir();" class="boton btnuno">c.</button>
                 </div>
                 <div class="desafio dos">
                     <h3>Desafíos N°2</h3>
-                    <button onclick="saludoSemana();" class="boton btndos">Desafío a.</button>
-                    <button onclick="tipoDeNumero();" class="boton btndos">Desafío b.</button>
-                    <button onclick="puntuacion();" class="boton btndos">Desafío c.</button>
-                    <button onclick="mostrarSaldo();" class="boton btndos">Desafío d.</button>
-                    <button onclick="mostrarNombre();" class="boton btndos">Desafío e.</button>
+                    <button onclick="saludoSemana();" class="boton btndos">a.</button>
+                    <button onclick="tipoDeNumero();" class="boton btndos">b.</button>
+                    <button onclick="puntuacion();" class="boton btndos">c.</button>
+                    <button onclick="mostrarSaldo();" class="boton btndos">d.</button>
+                    <button onclick="mostrarNombre();" class="boton btndos">e.</button>
                 </div>
                 <div class="desafio tres">
                     <h3>Desafíos N°3</h3>
-                    <button onclick="mostrarNumero();" class="boton btntres">Desafío a.</button>
-                    <button onclick="mostrarNumeroMenos();" class="boton btntres">Desafío b.</button>
-                    <button onclick="abrirConsola();" class="boton btntres">Desafío c.</button>
-                    <button onclick="abrirConsolaDos();" class="boton btntres">Desafío d.</button>
+                    <button onclick="mostrarNumero();" class="boton btntres">a.</button>
+                    <button onclick="mostrarNumeroMenos();" class="boton btntres">b.</button>
+                    <button onclick="abrirConsola();" class="boton btntres">c.</button>
+                    <button onclick="abrirConsolaDos();" class="boton btntres">d.</button>
                 </div>
                 <div class="desafio cuatro">
                     <h3>Desafíos N°4</h3>
-                    <button onclick="sumaValores();" class="boton btntres">Desafío a.</button>
-                    <button onclick="restaValores();" class="boton btntres">Desafío b.</button>
-                    <button onclick="mayorEdad();" class="boton btntres">Desafío c.</button>
-                    <button onclick="verificarNumero();" class="boton btntres">Desafío d.</button>
+                    <button onclick="sumaValores();" class="boton btntres">a.</button>
+                    <button onclick="restaValores();" class="boton btntres">b.</button>
+                    <button onclick="mayorEdad();" class="boton btntres">c.</button>
+                    <button onclick="verificarNumero();" class="boton btntres">d.</button>
                 </div>
                 <div class="desafio cinco">
                     <h3>Desafíos N°5</h3>
-                    <button onclick="verNumeros();" class="boton btncuatro">Desafío a.</button>
-                    <button onclick="verNota();" class="boton btncuatro">Desafío b.</button>
-                    <button onclick="numeroRandom();" class="boton btncuatro">Desafío c.</button>
-                    <button onclick="numeroRandomDos();" class="boton btncuatro">Desafío d.</button>
-                    <button onclick="numeroRandomTres();" class="boton btncuatro">Desafío e.</button>
-                    <button onclick="cambiarCodigo();" class="boton btncuatro">Desafío f.</button>
+                    <button onclick="verNumeros();" class="boton btncuatro">a.</button>
+                    <button onclick="verNota();" class="boton btncuatro">b.</button>
+                    <button onclick="numeroRandom();" class="boton btncuatro">c.</button>
+                    <button onclick="numeroRandomDos();" class="boton btncuatro">d.</button>
+                    <button onclick="numeroRandomTres();" class="boton btncuatro">e.</button>
+                    <button onclick="cambiarCodigo();" class="boton btncuatro">f.</button>
                     <button onclick="botonClick();" class="boton btncuatro">Console</button>
                     <button onclick="nombreCiudad();" class="boton btncuatro">Prompt</button>
                     <button onclick="botonAlerta();" class="boton btncuatro">Alerta</button>
